syntax = "proto3";

option go_package = "./rpc";

message BlockSearchReq {
  uint64 Number = 1;
  string Hash = 2;
  string Parent = 3;
}

message BlockSearchRes {
  bytes Block = 1;
}

service Block {
  rpc BlockSearch(BlockSearchReq) returns (stream BlockSearchRes);
}